--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
     <div id="video-container" style="display:block">
         <div class="row">
           <div class="carousel">
-            <a class="carousel-item" href="#zero!"><img id='one' src="http://static.rhap.com/img/500x500/4/3/2/3/28603234_500x500.jpg"></a> 
+            <a class="carousel-item" href="#zero!"><img src="http://static.rhap.com/img/500x500/4/3/2/3/28603234_500x500.jpg"></a> 
           </div>    
         </div>   
 
         <br>
 
-      <div class="row col s1" id="saved-video-container" style="display:block"></div>
-      
+        <div id="video-container" style="display:block">
+          <div class="row">
+            <div class="carousel saved">
+              <a class="carousel-item" href="#zero!"><img src="http://static.rhap.com/img/500x500/4/3/2/3/28603234_500x500.jpg"></a> 
+            </div>    
+          </div>         
     </div>
   </section>
 
