effort in making API's talking to eachother

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
   
           <div class="carousel">
             <a class="carousel-item" href="#zero!"><img src="http://static.rhap.com/img/500x500/4/3/2/3/28603234_500x500.jpg"></a> 
-          </div>    
-  
+          </div>
+
+            <div value="theWeekend"></div>
 
         <br>
 
